--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>Apiko 20th task</title>
     <meta charset="UTF-8" />
   </head>
-  
+
   <body>
     <div id="app"></div>
-	
+
 	<header>
 	<div >
 		<input type="text" id = "inputValue" placeholder="Search for the movie" />
-    <button type = "text" id = "search" >Search</button>
+    <button type = "text" id = "search" >69 ГРН</button>
     <script src="app.js"></script>
 	</div>
 	</header>
@@ -23,13 +23,13 @@
 
 
 <div id = "movieSearchable">
-  
-  
+
+
 	</div>
 </div>
 
 
-    
+
   </body>
-  
+
 </html>
